--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
+        <module>console</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -16,6 +17,7 @@
         <logback.version>1.2.3</logback.version>
         <spring.version>5.0.5.RELEASE</spring.version>
         <java.version>10</java.version>
+        <annotation-api.version>1.3.2</annotation-api.version>
     </properties>
     <dependencyManagement>
 
@@ -34,6 +36,15 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+
+            <!--Annotation API-->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation-api.version}</version>
+            </dependency>
+
+
         </dependencies>
 
     </dependencyManagement>
